add files page project and about

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -2,3 +2,13 @@
     font-family: Hillshort;
     src: url("../font/Hillshort.otf");
 }
+
+@font-face {
+    font-family: Disco;
+    src: url("../font/Disco-society.otf");
+}
+
+@font-face {
+    font-family: Cormorant;
+    src: url("../font/CormorantGaramond-Medium.ttf");
+}
