--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,20 +2,88 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+}
+
+body {
+  overflow: hidden;
+}
+
+@font-face {
+  font-family: Hillshort;
+  src: url("../font/Hillshort.otf");
+}
+@font-face {
+  font-family: Disco;
+  src: url("../font/Disco-society.otf");
+}
+@font-face {
+  font-family: Cormorant;
+  src: url("../font/CormorantGaramond-Medium.ttf");
+}
+header .container_flex {
+  display: grid;
+  grid-template: 20vh/15vw 70vw 15vw;
+  place-items: center;
+  align-content: center;
+}
+header .container_flex figure {
+  padding-left: 2rem;
+}
+header .container_flex h1 {
+  font: normal 4.5rem Disco;
+  text-transform: uppercase;
+}
+header .container_flex div {
+  position: relative;
+  cursor: pointer;
+  padding-right: 2rem;
+  justify-self: end;
+  z-index: 2;
+}
+header .container_flex div p:nth-of-type(1) {
+  position: absolute;
+  top: 7%;
+  left: -10%;
+  font: bold 1rem Cormorant;
+}
+header nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  z-index: 1;
+  top: -100%;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  font: bold 4.5rem Cormorant;
+  text-transform: uppercase;
+  background-color: #181818;
+  text-align: center;
+}
+header nav li {
+  margin: 5rem;
+  cursor: pointer;
 }
 
 .doors {
   position: absolute;
+  z-index: 10;
   height: 100vh;
   width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: 2s cubic-bezier(0.93, 0.06, 0.72, 0.73);
 }
 .doors_right {
   top: 0;
   right: 0;
-  background: no-repeat center/100% url("../img/bgRight.png");
+  background: no-repeat center/100% url("../img/background/bgRight.png");
+}
+.doors_right--active {
+  right: -50%;
 }
 .doors_right button {
   border-radius: 0.8rem;
@@ -41,7 +109,12 @@
   left: 0;
 }
 .doors_left {
-  background: no-repeat center/100% url("../img/bgLeft.png");
+  background: no-repeat center/100% url("../img/background/bgLeft.png");
+  top: 0;
+  left: 0;
+}
+.doors_left--active {
+  left: -50%;
 }
 .doors_left button {
   border-radius: 0.8rem;
@@ -65,9 +138,6 @@
   content: url("../img/leftA.png");
   top: 35%;
   right: 0;
-}
-.doors--active {
-  transition: all;
 }
 
 /*# sourceMappingURL=style.css.map */
