--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  user-select: none;
 }
 
 body {
@@ -82,9 +83,6 @@ header nav li {
   right: 0;
   background: no-repeat center/100% url("../img/background/bgRight.png");
 }
-.doors_right--active {
-  right: -50%;
-}
 .doors_right button {
   border-radius: 0.8rem;
   outline: 3px solid #EBEAEC;
@@ -113,9 +111,6 @@ header nav li {
   top: 0;
   left: 0;
 }
-.doors_left--active {
-  left: -50%;
-}
 .doors_left button {
   border-radius: 0.8rem;
   outline: 3px solid #181818;
@@ -138,6 +133,49 @@ header nav li {
   content: url("../img/leftA.png");
   top: 35%;
   right: 0;
+}
+
+main .main_project {
+  padding-top: 5rem;
+  display: grid;
+  grid-template: 80vh/30vw 70vw;
+}
+main .main_project figure {
+  padding-left: 10%;
+}
+main .main_project > div {
+  position: relative;
+  padding: 0 10%;
+}
+main .main_project > div::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 65%;
+  border: 1px solid #181818;
+}
+main .main_project > div h2 {
+  font: 3rem bold Cormorant;
+}
+main .main_project > div p {
+  padding-top: 3rem;
+  font: 2rem Cormorant;
+}
+main .main_project > div button {
+  margin: 13rem 0 0 40rem;
+  padding: 1.2rem 6rem;
+  font: 2rem bold Cormorant;
+  border-radius: 1rem;
+  background-color: transparent;
+  cursor: pointer;
+}
+main .main_project span {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  cursor: pointer;
+  opacity: 0.5;
 }
 
 /*# sourceMappingURL=style.css.map */
