--- a/assets/sass/pages/_project.scss
+++ b/assets/sass/pages/_project.scss
@@ -6,6 +6,12 @@ main {
 
         figure {
             padding-left: 10%;
+
+            img {
+                clip-path: url(#blob);
+                width: 100%;
+                height: 100%;
+            }
         }
 
         &>div {
@@ -38,7 +44,6 @@ main {
                 background-color: transparent;
                 cursor: pointer;
             }
-
         }
 
         span {
