--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -6,7 +6,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 2s cubic-bezier(.93, .06, .72, .73);
 
     &_right {
         top: 0;
@@ -53,5 +52,39 @@
 
         }
     }
+
+    &_top {
+        position: absolute;
+        height: 50vh;
+        width: 100vw;
+        border-bottom: double $light-color;
+        z-index: 1;
+        top: -50%;
+        background: $darkness-color;
+        color: $light-color;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-transform: uppercase;
+        font-size: 4rem;
+
+    }
+
+    &_bottom {
+        position: absolute;
+        height: 50vh;
+        width: 100vw;
+        border-top: double $darkness-color;
+        z-index: 1;
+        bottom: -50%;
+        background: $light-color;
+        color: $darkness-color;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-transform: uppercase;
+        font-size: 4rem;
+    }
+
 
 }
