--- a/assets/sass/pages/_project.scss
+++ b/assets/sass/pages/_project.scss
@@ -1,4 +1,5 @@
 main {
+
     .main_project {
         padding-top: 5rem;
         display: grid;
@@ -6,26 +7,31 @@ main {
 
         figure {
             padding-left: 10%;
-
-            img {
-                clip-path: url(#blob);
-                width: 100%;
-                height: 100%;
-            }
-        }
-
-        &>div {
+            overflow: hidden;
             position: relative;
-            padding: 0 10%;
 
             &::before {
                 content: "";
                 position: absolute;
                 top: 0;
-                left: 0;
+                right: 0;
                 height: 65%;
                 border: 1px solid #181818;
             }
+
+
+            img {
+                clip-path: url(#blob);
+                width: 100%;
+                height: 100%;
+                transform: translateX(700px);
+            }
+        }
+
+        &>div {
+            padding: 0 10%;
+            transform: scaleY(0);
+            opacity: 1;
 
             h2 {
                 font: 3rem bold $font-text;
