--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ header nav li {
   content: url("../img/rightA.png");
   top: 35%;
   left: 0;
+  filter: url(#turbTest);
 }
 .doors_left {
   background: no-repeat center/100% url("../img/background/bgLeft.png");
@@ -132,15 +133,16 @@ header nav li {
   content: url("../img/leftA.png");
   top: 35%;
   right: 0;
+  filter: url(#turbTest);
 }
 .doors_top {
   position: absolute;
   height: 50vh;
   width: 100vw;
   border-bottom: double #EBEAEC;
-  z-index: 1;
+  z-index: 3;
   top: -50%;
-  background: #181818;
+  background: center/cover url("../img/background/fondDoorsBottom.png");
   color: #EBEAEC;
   display: flex;
   align-items: center;
@@ -153,9 +155,9 @@ header nav li {
   height: 50vh;
   width: 100vw;
   border-top: double #181818;
-  z-index: 1;
+  z-index: 3;
   bottom: -50%;
-  background: #EBEAEC;
+  background: center/cover url("../img/background/fondDoorsTop.png");
   color: #181818;
   display: flex;
   align-items: center;
@@ -207,6 +209,11 @@ main .main_project > div button {
   border-radius: 1rem;
   background-color: transparent;
   cursor: pointer;
+  transition: 0.3s;
+}
+main .main_project > div button:hover {
+  background-color: #181818;
+  color: #EBEAEC;
 }
 main .main_project span {
   position: absolute;
@@ -214,6 +221,47 @@ main .main_project span {
   bottom: 0;
   cursor: pointer;
   opacity: 0.5;
+}
+
+main .about {
+  display: grid;
+  grid-template: 20vh 50vh/70vw 20vw;
+  padding: 2% 5%;
+}
+main .about #subNav {
+  position: relative;
+  grid-area: 1/2/3/3;
+}
+main .about #subNav #border-nav {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+main .about #subNav ul {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+main .about #subNav ul li {
+  position: relative;
+  font: 3rem Disco;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+main .about #container_about_me {
+  width: 60%;
+}
+main .about #container_about_me p:first-child {
+  font-size: 2.5rem;
+}
+main .about #container_about_me .soft {
+  opacity: 0.6;
+  font-size: 1.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
