--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -26,6 +26,7 @@
             content: url("../img/rightA.png");
             top: 35%;
             left: 0;
+            filter: url(#turbTest);
 
         }
     }
@@ -38,6 +39,7 @@
         & button {
             @include buttons($darkness-color);
 
+
             &:hover {
                 color: $light-color;
                 background-color: $darkness-color;
@@ -49,6 +51,7 @@
             content: url("../img/leftA.png");
             top: 35%;
             right: 0;
+            filter: url(#turbTest);
 
         }
     }
@@ -58,9 +61,9 @@
         height: 50vh;
         width: 100vw;
         border-bottom: double $light-color;
-        z-index: 1;
+        z-index: 3;
         top: -50%;
-        background: $darkness-color;
+        background: center/cover url('../img/background/fondDoorsBottom.png');
         color: $light-color;
         display: flex;
         align-items: center;
@@ -75,9 +78,9 @@
         height: 50vh;
         width: 100vw;
         border-top: double $darkness-color;
-        z-index: 1;
+        z-index: 3;
         bottom: -50%;
-        background: $light-color;
+        background: center/cover url('../img/background/fondDoorsTop.png');
         color: $darkness-color;
         display: flex;
         align-items: center;
