--- a/assets/sass/pages/_project.scss
+++ b/assets/sass/pages/_project.scss
@@ -16,7 +16,7 @@ main {
                 top: 0;
                 right: 0;
                 height: 65%;
-                border: 1px solid #181818;
+                border: 1px solid $darkness-color;
             }
 
 
@@ -49,6 +49,12 @@ main {
                 border-radius: 1rem;
                 background-color: transparent;
                 cursor: pointer;
+                transition: .3s;
+
+                &:hover {
+                    background-color: $darkness-color;
+                    color: $light-color;
+                }
             }
         }
 
