add class for project

--- a/assets/sass/pages/_project.scss
+++ b/assets/sass/pages/_project.scss
@@ -74,7 +74,10 @@ main {
             top: 0;
             cursor: pointer;
             opacity: .5;
-            display: none;
         }
+    }
+
+    .hide {
+        display: none;
     }
 }
