--- a/assets/sass/pages/_project.scss
+++ b/assets/sass/pages/_project.scss
@@ -35,7 +35,9 @@ main {
             }
 
             button {
-                margin: 13rem 0 0 40rem;
+                position: absolute;
+                right: 10%;
+                bottom: 30%;
                 padding: 1.2rem 6rem;
                 font: 2rem bold $font-text;
                 border-radius: 1rem;
