--- a/assets/sass/pages/_project.scss
+++ b/assets/sass/pages/_project.scss
@@ -51,11 +51,36 @@ main {
                 }
             }
 
+            .btn_git {
+                bottom: 45%;
+                right: 16%;
+                padding: 1.2rem 2rem;
+                transition: all 1.5s;
+
+                &:hover path {
+                    fill: $light-color;
+                }
+            }
+
+            .list_technos {
+                padding-top: 3%;
+
+                h3 {
+                    text-transform: capitalize;
+                    align-self: center;
+                    font-size: 1.5rem;
+                    font-weight: bold;
+
+                }
+
+            }
+
             &--before {
                 position: absolute;
+                z-index: 1;
                 top: 0;
                 left: 0;
-                height: 65%;
+                height: 70%;
                 border-right: 1px solid $darkness-color;
                 width: 0;
                 background: $light-color;
