--- a/assets/sass/pages/_about.scss
+++ b/assets/sass/pages/_about.scss
@@ -1,59 +1,50 @@
-main {
-    .about {
-        display: grid;
-        grid-template: 20vh 50vh /70vw 20vw;
-        padding: 2% 5%;
+#about {
+    display: grid;
+    grid-template: 70vh / 70vw 20vw;
+    padding: 2% 5%;
 
-        #subNav {
-            position: relative;
-            grid-area: 1/2/3/3;
+    #subNav {
+        height: 100%;
 
-            #border-nav {
-                position: absolute;
-                z-index: -1;
-                top: 0;
-                left: 0;
-                height: 100%;
-                width: 100%;
-            }
+        ul {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
 
-            ul {
-                height: 100%;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-around;
-                align-items: center;
-
-                li {
-                    position: relative;
-                    font: 3rem $font-title;
-                    text-transform: uppercase;
-                    cursor: pointer;
-
-                    // &::before {
-                    //     content: "";
-                    //     position: absolute;
-                    //     height: 120%;
-                    //     width: 100%;
-                    //     top: 0;
-                    //     left: 0;
-                    //     background: rgba(255, 255, 255, .5);
-                    // }
-                }
+            li {
+                position: relative;
+                font: 3rem $font-title;
+                text-transform: uppercase;
+                cursor: pointer;
             }
         }
+    }
 
-        #container_about_me {
-            width: 60%;
+    .about {
+        #border-nav {
+            position: absolute;
+            z-index: -1;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+        }
 
-            p:first-child {
-                font-size: 2.5rem;
-            }
 
-            .soft {
-                opacity: .6;
-                font-size: 1.5rem;
-            }
+    }
+
+    #container_about_me {
+        width: 60%;
+
+        p:first-child {
+            font-size: 2.5rem;
+        }
+
+        .soft {
+            opacity: .6;
+            font-size: 1.5rem;
         }
     }
 }
