--- a/assets/sass/pages/_about.scss
+++ b/assets/sass/pages/_about.scss
@@ -23,7 +23,6 @@
     }
 
     .about {
-
         display: grid;
         grid-template: 20vh 50vh / 70vw;
 
@@ -35,7 +34,6 @@
             height: 100%;
             width: 100%;
         }
-
 
     }
 
@@ -115,8 +113,8 @@
                 left: -30%;
                 height: 50%;
                 width: .5rem;
-                border-radius: 2.3rem;
-                background-color: $light-color;
+                filter: blur(2px) url(#turbTest);
+                border-left: .3rem solid $light-color;
                 opacity: .9;
             }
         }
@@ -124,7 +122,7 @@
 
     #download {
         position: absolute;
-        bottom: 0;
+        bottom: 2%;
         left: 45.5%;
         cursor: pointer;
 
@@ -136,7 +134,7 @@
         &-popup {
             padding: .1rem .5rem;
             position: absolute;
-            bottom: 11%;
+            bottom: 13%;
             left: 43.5%;
             border-bottom: 1px solid $light-color;
             font-family: $font-text;
@@ -148,5 +146,96 @@
         &:hover+#download-popup {
             opacity: 1;
         }
+    }
+
+    #sub_container {
+        position: relative;
+    }
+
+    //PAGE CONTACT
+    #container_contact--title {
+        align-self: center;
+
+        h2 {
+            font-size: 4.2rem;
+            text-transform: capitalize;
+        }
+
+    }
+
+    //* Form CSS
+    form {
+        text-align: center;
+
+        fieldset {
+            border: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            input {
+                position: relative;
+                min-width: 25vw;
+                padding: .5rem;
+                margin-bottom: 1rem;
+                font: 1.4rem $font-text;
+                font-weight: 900;
+                outline: none;
+                background: local;
+                border: none;
+                border-bottom: 2px solid $light-color;
+                color: $light-color;
+            }
+        }
+
+        textarea {
+            margin: 0 10vw;
+            width: 50vw;
+            outline: none;
+            font: 1.4rem $font-text;
+            font-weight: 900;
+            border: none;
+            // border-bottom: 2px solid $light-color;
+            border-left: 2px solid $light-color;
+            // border-right: 2px solid $light-color;
+            color: $light-color;
+            background: local;
+            padding: .5rem;
+            padding-left: 2rem;
+            resize: none;
+        }
+
+        #submit {
+            padding: .5rem 4rem;
+            font: 2.5rem $font-title;
+            font-weight: 900;
+            text-transform: uppercase;
+            letter-spacing: .3rem;
+            background-color: $light-color;
+            color: $darkness-color;
+            border: none;
+            border-radius: .5rem;
+            text-align: center;
+            cursor: pointer;
+            transition: all .3s;
+
+            &:hover {
+                background: $darkness-color;
+                color: $light-color;
+                outline: 1px solid $light-color;
+            }
+        }
+    }
+
+    //! about transition nav
+    &-transition {
+        position: absolute;
+        height: 100%;
+        top: 0;
+        left: 0;
+        width: 6vw;
+        background-color: #181818;
+        border-left: 1rem solid $light-color;
+        filter: blur(5px) url(#turbTest);
     }
 }
