--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -413,6 +413,35 @@ main .hide {
   font-size: 4.2rem;
   text-transform: capitalize;
 }
+#about #modal_error {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  color: #181818;
+  background-color: rgba(24, 24, 24, 0.6705882353);
+  backdrop-filter: blur(6px);
+  text-align: center;
+  display: flex;
+}
+#about #modal_error p {
+  position: relative;
+  margin: auto;
+  font: 5rem Disco;
+  color: #E33026;
+  border: 2px solid;
+  border-radius: 1rem;
+  padding: 4rem 8rem;
+}
+#about #modal_error p span {
+  position: absolute;
+  right: 5%;
+  top: 5%;
+  font-size: 6rem;
+  cursor: pointer;
+}
 #about form {
   text-align: center;
 }
@@ -422,8 +451,17 @@ main .hide {
   flex-direction: column;
   align-items: center;
 }
-#about form fieldset input {
+#about form fieldset label {
   position: relative;
+  color: #E33026;
+}
+#about form fieldset label::after {
+  content: "*";
+  position: absolute;
+  right: -10vw;
+  bottom: -2vh;
+}
+#about form fieldset input {
   min-width: 25vw;
   padding: 0.5rem;
   margin-bottom: 1rem;
@@ -434,6 +472,7 @@ main .hide {
   border: none;
   border-bottom: 2px solid #EBEAEC;
   color: #EBEAEC;
+  caret-color: rgba(255, 255, 255, 0.184);
 }
 #about form textarea {
   margin: 0 10vw;
