--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -75,6 +75,43 @@ header nav li {
   margin: 5rem;
   cursor: pointer;
 }
+header nav li:hover {
+  animation: subNavHov 0.3s ease-in-out 2 alternate;
+}
+@keyframes subNavHov {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(1.5);
+  }
+}
+header nav .active {
+  opacity: 1;
+}
+header nav .active::after {
+  content: "";
+  position: absolute;
+  top: -2vh;
+  left: -1.3vw;
+  filter: url(#turbTest) blur(2px);
+  width: 145%;
+  height: 162%;
+  border-bottom: 5px solid;
+  border-top: 5px solid;
+  backdrop-filter: opacity(0.5);
+  border-radius: 1.2rem;
+  animation: subNavKey 0.5s ease-out;
+  transform-origin: center;
+}
+@keyframes subNavKey {
+  from {
+    width: 0;
+  }
+  to {
+    width: 145%;
+  }
+}
 
 .doors {
   position: absolute;
@@ -259,10 +296,11 @@ main .main_project .project_description--before {
   z-index: 1;
   top: 0;
   left: 0;
-  height: 70%;
-  border-right: 1px solid #181818;
+  height: 75%;
+  border-right: 5px solid #181818;
   width: 0;
   background: #EBEAEC;
+  filter: url(#turbTest) blur(1px);
 }
 main .main_project #arrow-down {
   position: absolute;
@@ -302,6 +340,46 @@ main .hide {
   font: 3rem Disco;
   text-transform: uppercase;
   cursor: pointer;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+#about #subNav ul li:hover {
+  opacity: 1;
+  animation: subNavHov 0.3s ease-in-out 2 alternate;
+}
+@keyframes subNavHov {
+  from {
+    transform: scaleY(1);
+  }
+  to {
+    transform: scaleY(1.5);
+  }
+}
+#about #subNav ul .active {
+  opacity: 1;
+}
+#about #subNav ul .active::after {
+  content: "";
+  position: absolute;
+  top: -2vh;
+  left: -1.3vw;
+  filter: url(#turbTest) blur(2px);
+  width: 145%;
+  height: 162%;
+  border-bottom: 5px solid;
+  border-top: 5px solid;
+  backdrop-filter: opacity(0.5);
+  border-radius: 1.2rem;
+  animation: subNavKey 0.5s ease-out;
+  transform-origin: center;
+}
+@keyframes subNavKey {
+  from {
+    width: 0;
+  }
+  to {
+    width: 145%;
+  }
 }
 #about .about {
   display: grid;
@@ -406,12 +484,59 @@ main .hide {
 #about #sub_container {
   position: relative;
 }
+#about #container_skills {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+#about #container_skills svg {
+  transform: scale(1.3);
+  transition: all 0.5s ease-out;
+  cursor: pointer;
+}
+#about #container_skills svg:hover {
+  transform: scale(2);
+}
+#about #container_skills svg:hover path {
+  transform: rotateY(1turn);
+  fill: #EBEAEC !important;
+  stroke: #181818 !important;
+}
+#about #container_skills svg path {
+  transition: all 1s ease-in-out;
+  transform-origin: center;
+  stroke-dasharray: 1000;
+}
 #about #container_contact--title {
   align-self: center;
+  display: flex;
 }
 #about #container_contact--title h2 {
   font-size: 4.2rem;
   text-transform: capitalize;
+  margin-right: 10vw;
+}
+#about #container_contact--title ul {
+  display: flex;
+  align-self: center;
+}
+#about #container_contact--title ul li {
+  margin-right: 3vw;
+}
+#about #container_contact--title ul li svg {
+  transition: transform 0.3s;
+  transform-origin: top left;
+  cursor: pointer;
+}
+#about #container_contact--title ul li svg:hover {
+  transform: rotate(20deg);
+}
+#about #container_contact--title ul li svg:hover path {
+  fill: #EBEAEC !important;
+}
+#about #container_contact--title ul li svg path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 500;
 }
 #about #modal_error {
   position: absolute;
